Now written in jQuery

--- a/html/professional.html
+++ b/html/professional.html
@@ -38,7 +38,6 @@
   <meta property="og:description" content="The personal resume of Thomas Edward Rudge. A Business Analyst, Operations Expert, and Software Developer, with over 8 year's experience in Business and IT Change." />
   <!-- CSS & JS -->
   <link rel="stylesheet" href="../css/main.css" />
-  <script type="text/javascript" src="../javascript/professional.js"></script>
   <!-- Structured Data -->
   <script type="application/ld+json">
   {
@@ -81,7 +80,7 @@
 
 <body id=bprof>
   <div id=container>
-    <a id=topbar class='gen_text centred_txt' onclick='scrollToTop()'>
+    <a id=topbar class='gen_text centred_txt'>
     ^^^
     </a>
     <div id=noscript>
@@ -116,7 +115,6 @@
           </ul>
         </nav>
         <div id=navmobile>
-          <a id=mobile_navlink onclick='toggleNavPane(1)'></a>
         </div>
         <div id=mobilelist>
           <ul class=gen_text>
@@ -469,8 +467,6 @@
           </tr>
         </table>
       </div>
-      <div class=moreinfo_container id=moreinfo_cont>
-      </div>
       <!-- This will only appear if the screen is wide enough -->
       <div id=full_table1 class=margin70>
         <span class='margin70 gen_title small_text'>Professional</span>
@@ -489,7 +485,7 @@
             Location
             </th>
           </tr>
-          <tr>
+          <tr class=exp>
             <td class=centred_txt>
             Oct 2014
             </td>
@@ -497,7 +493,21 @@
             Present
             </td>
             <td>
-            <a onclick='moreInfo(0)' class=moreinfo_link>Freelance <span class=small_text>(Software, Graphic Design)</span></a>
+              Freelance <span class=small_text>(Software, Graphic Design)</span>
+              <div class=moreinfo>
+			    <p class="gen_text moreinfo_text margin0 justify">
+                  <span class=centred style="float:right;"><b><u>Freelance</u></b></span>
+                  <br/><br/>
+                  Designed and built Nepos, a point of sale and cash management system for start-ups and small businesses. 
+                  Currently in use by several businesses in the north east of India.
+                  <br/><br/>
+                  Created desktop software that creates Swift MT940 cash statements from financial records for a company in Germany.
+                  <br/><br/>
+                  Provided Business Analyst services to a finance company for various projects in and around Nagaland.
+                  <br/><br/>
+                  Produced various designs and printed materials for a number of companies in the north east of India.
+                </p>
+              </div>
             </td>
             <td>
             Various
@@ -506,7 +516,7 @@
             Kohima, India
             </td>
           </tr>
-          <tr>
+          <tr class=exp>
             <td class=centred_txt>
             Jul 2013
             </td>
@@ -514,7 +524,16 @@
             Jul 2014
             </td>
             <td>
-            <a onclick='moreInfo(1)' class=moreinfo_link>Career Break</a>
+               Career Break
+               <div class=moreinfo>
+                  <p class="gen_text moreinfo_text margin0 justify">
+                     <span class=centred style="float:right;"><b><u>Career Break</u></b></span>
+                     <br/><br/>
+                     During this time I moved to Nagaland in India to spend time with my wife's family, and get to know her place of birth, 
+                     culture, and customs. As well as exploring her beautiful country I spent a lot of my time acquiring knowledge and 
+                     learning new skills through online resources.
+                  </p>
+               </div>
             </td>
             <td>
             n/a
@@ -523,7 +542,7 @@
             India
             </td>
           </tr>
-          <tr>
+          <tr class=exp>
             <td class=centred_txt>
             Sep 2010
             </td>
@@ -531,7 +550,29 @@
             Jun 2013
             </td>
             <td>
-            <a onclick='moreInfo(2)' class=moreinfo_link>Technical SME (Analyst)</a>
+               Technical SME (Analyst)
+               <div class=moreinfo>
+                  <p class="gen_text moreinfo_text margin0 justify">
+                     <span class=centred style="float:right;">
+                        <b><u>Technical SME<br>
+                           <span style="font-size: 12px;">Analyst</span>
+                        </u></b>
+                     </span>
+                     <br/><br/><br/>
+                     Senior analyst in the management team of the corporate and investment bank’s reconciliation services utility. 
+                     Responsible for the proactive optimisation of operational processes and systems. Advisor to senior management on 
+                     operations, technology, and change.
+                     <br/><br/>
+                     Business technical lead in global change activities, including requirement elicitation and management, solution assessment, operations impact 
+                     analysis, risk analysis, testing, implementation planning and execution.
+                     <br/><br/>
+                     Owned and managed the front end configuration of the bank’s main reconciliation system.
+                     <br/><br/>
+                     Generated and maintained bespoke MI using SQL for various areas in the department.
+                     <br/><br/>
+                     Worked with external auditors to develop a control framework for the reconciliation of a national payment system and clearing process.
+                  </p>
+               </div>
             </td>
             <td>
             Barclays Plc
@@ -540,7 +581,7 @@
             Poole, UK
             </td>
           </tr>
-          <tr>
+          <tr class=exp>
             <td class=centred_txt>
             Mar 2008
             </td>
@@ -548,7 +589,33 @@
             Aug 2010
             </td>
             <td>
-            <a onclick='moreInfo(3)' class=moreinfo_link>Business Analyst, <span class=small_text>Corporate Change</span></a>
+               Business Analyst, <span class=small_text>Corporate Change</span>
+               <div class=moreinfo>
+                  <p class="gen_text moreinfo_text margin0 justify">
+                     <span class=centred style="float:right;">
+                        <b><u>Business Analyst<br/>
+                           <span style="font-size: 12px;">Corporate Change</span>
+                        </u></b>
+                     </span>
+                     <br/><br/><br/>
+                     Business Analyst within the Global Payments Change Team. Role included: Eliciting and documenting stakeholder and 
+                     end user requirements; performing impact assessments on business operations and systems; contributing to operational 
+                     risk assessments and developing/proposing effective controls; designing and managing the execution of User Acceptance 
+                     Testing; creating implementation plans; and performing post implementation analysis and lessons learnt.
+                  </p>
+                  <ul>
+                     <li>
+                     Awarded the "Significant Technology Achievement Award" from the CIO of Technology and COO of Barclays Africa, in 
+                     recognition of the outstanding contribution to the Kenya Replatforming Programme.
+                     </li>
+                     <li>
+                     Awarded the "Global Payments Award 2009" from the GP Vice Chairman for playing a critical role in the resolution of a BAU system incident.
+                     </li>
+                     <li>
+                     Successful implementation of multiple projects.
+                     </li>
+                  </ul>
+               </div>
             </td>
             <td>
             Barclays Plc
@@ -557,7 +624,7 @@
             Poole, UK
             </td>
           </tr>
-          <tr>
+          <tr class=exp>
             <td class=centred_txt>
             Jun 2007
             </td>
@@ -565,7 +632,17 @@
             Feb 2008
             </td>
             <td>
-            <a onclick='moreInfo(4)' class=moreinfo_link>TLM System Administrator</a>
+               TLM System Administrator
+               <div class=moreinfo>
+                  <p class="gen_text moreinfo_text margin0 justify">
+                     <span class=centred style="float:right;">
+                        <b><u>TLM System Administrator</u></b>
+                     </span>
+                     <br/><br/>
+                     Monitoring and administration of STL TLM and SSR Swift messaging systems. Duties included static configuration; monitoring via logs 
+                     and SQL queries to databases; incoming and outgoing message monitoring; account proofing; and incident management and resolution.
+                  </p>
+               </div>
             </td>
             <td>
             Barclays Plc
@@ -574,7 +651,7 @@
             Poole, UK
             </td>
           </tr>
-          <tr>
+          <tr class=exp>
             <td class=centred_txt>
             Nov 2006
             </td>
@@ -582,7 +659,21 @@
             May 2007
             </td>
             <td>
-            <a onclick='moreInfo(5)' class=moreinfo_link>Account Manager, <span class=small_text>Global Payments</span></a>
+               Account Manager, <span class=small_text>Global Payments</span>
+               <div class=moreinfo>
+                  <p class="gen_text moreinfo_text margin0 justify">
+                     <span class=centred style="float:right;">
+                        <b><u>Account Manager
+                           <br/>
+                           <span style="font-size: 12px;">Global Payments</span>
+                        </u></b>
+                     </span>
+                     <br/><br/><br/>
+                     This role involved the daily monitoring, reconciling, and timely reporting of account ledgers and statements. Due to my extensive knowledge 
+                     of the business processes I was selected to write the business procedures and process flow maps as part of an off-shoring project. I then used 
+                     those documents to train and test my off-shore colleagues.
+                  </p>
+               </div>
             </td>
             <td>
             Barclays Plc
@@ -611,7 +702,7 @@
             Location
             </th>
           </tr>
-          <tr>
+          <tr class=exp>
             <td class=centred_txt>
             Jul 2014
             </td>
@@ -619,7 +710,18 @@
             Jul 2015
             </td>
             <td>
-            <a onclick='moreInfo(6)' class=moreinfo_link>English Teacher</a>
+               English Teacher
+               <div class=moreinfo>
+                  <p class="gen_text moreinfo_text margin0 justify">
+                     <span class=centred style="float:right;">
+                        <b><u>English Teacher</u></b>
+                     </span>
+                     <br/><br/>
+                     Taught English to class 10 students at the Children\'s Christian School in Kohima, Nagaland. The school provides education to poor and 
+                     underprivileged children in the north east of India.
+                     <br/><br/>
+                  </p>
+               </div>
             </td>
             <td>
             C.C.School
@@ -876,5 +978,7 @@
     Site not working properly? <span class=main_glyph>&#128534;</span> <a class=normal_link href="mailto:hello@thomasrudge.co.uk?Subject=Something%20is%20wrong%20with%20your%20site!">Please let me know.</a>
     </footer>
   </div>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script type="text/javascript" src="../javascript/professional.js"></script>
 </body>
 </html>
