Improved javascript syntax.

--- a/html/contact.html
+++ b/html/contact.html
@@ -65,7 +65,7 @@
 
 <body id=bcont style='height:100%;'>
   <div id=container style='height:100%;'>
-    <a id=topbar class='gen_text centred_txt' onclick='scrollToTop()'>
+    <a id=topbar class='gen_text centred_txt'>
     ^^^
     </a>
     <header>
@@ -97,7 +97,7 @@
         </ul>
         </nav>
         <div id=navmobile>
-        <a id=mobile_navlink onclick='toggleNavPane(1)'></a>
+        <a id=mobile_navlink></a>
         </div>
         <div id=mobilelist>
           <ul class=gen_text>
@@ -156,7 +156,7 @@
     <div class=rowcontainer>
       <div class=design_div id=contact_div>
         <div id=emailme_big>
-          <a class=contact_link href="mailto:me@thomasrudge.co.uk"> </a>
+          <a class=contact_link href="mailto:hello@thomasrudge.co.uk"> </a>
         </div>
         <div id=linkedin_big>
           <a class=contact_link href="https://www.linkedin.com/in/thomasrudge" target="_blank"> </a>
