--- a/html/design.html
+++ b/html/design.html
@@ -38,7 +38,6 @@
   <meta property="og:description" content="Graphic design portfolio of Thomas Edward Rudge." />
   <!-- CSS & JS -->
   <link rel="stylesheet" href="../css/main.css" />
-  <script type="text/javascript" src="../javascript/slides.js"></script>
   <!-- Icons-->
   <link rel="apple-touch-icon" sizes="57x57" href="../favicon/apple-touch-icon-57x57.png" />
   <link rel="apple-touch-icon" sizes="60x60" href="../favicon/apple-touch-icon-60x60.png" />
@@ -66,7 +65,7 @@
 
 <body id=bdesign>
   <div id=container>
-    <a id=topbar class='gen_text centred_txt' onclick='scrollToTop()'>
+    <a id=topbar class='gen_text centred_txt'>
     ^^^
     </a>
     <header>
@@ -98,7 +97,7 @@
         </ul>
         </nav>
         <div id=navmobile>
-          <a id=mobile_navlink onclick='toggleNavPane(1)'></a>
+
         </div>
         <div id=mobilelist>
           <ul class=gen_text>
@@ -219,7 +218,7 @@
       </div>
     </div>
     <br />
-    <div class=rowcontainer id=rc3>  
+    <div class=rowcontainer id=rc3>
       <div id=dimg12 class=design_div>
         <img src="../images/design/lazy_placeholder.gif" alt="GSL" title='GSL Brochure' onclick="expandImageView('dimg12')" />
         <p class='gen_text centred small_text invert_text'>The cover page of a brochure create for Gunpati Stock Ltd.</p>
@@ -267,5 +266,7 @@
     Site not working properly? &#128534; <a class=normal_link href="mailto:hello@thomasrudge.co.uk?Subject=Something%20is%20wrong%20with%20your%20site!">Please let me know.</a>
     </footer>
   </div>
+<script type="text/javascript" src="../javascript/slides.js"></script>
+<script type="text/javascript" src="../javascript/mobile_navigation.js"></script>
 </body>
 </html>
