--- a/html/professional.html
+++ b/html/professional.html
@@ -36,7 +36,7 @@
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:description" content="The personal resume of Thomas Edward Rudge. A Business Analyst, Operations Expert, and Software Developer, with over 8 year's experience in Business and IT Change." />
-  <!-- CSS & JS -->
+  <!-- CSS -->
   <link rel="stylesheet" href="../css/main.css" />
   <!-- Structured Data -->
   <script type="application/ld+json">
@@ -174,7 +174,7 @@
     <div class='block_ gen_div'>
       <p class='gen_text justify med_text margin70'>
         <span class='gen_title title_text'>Curriculum Vitae</span><br />
-        Business Analyst, Operations Expert, and Software Developer, with over 8 year's experience in Business and IT Change. 
+        Business Analyst, Operations Expert, and Software Developer, with over 8 year's experience in Business and IT Change.
       </p>
       <p class='gen_text justify med_text margin70 no_bottom'>
         <span class='gen_title no_top no_bottom blue_text'><u>Summary</u></span><br />
@@ -184,7 +184,7 @@
         Sole designer and developer of <a class=normal_link href='software.html#nepos'>Nepos</a>, a point of sale and cash management system currently being distributed in north east India.
         </li>
         <li>
-        Proven leadership skills with extensive experience managing operation, test, and implementation teams, across both local and global areas. 
+        Proven leadership skills with extensive experience managing operation, test, and implementation teams, across both local and global areas.
         </li>
         <li>
         Capable of achieving operational efficiencies through data analysis, process redesign, and bespoke automation.
@@ -193,7 +193,7 @@
             In my position as a Technical SME I improved the straight through processing of the main reconciliation system by 5% in the first 6 months of the role. The STP improvement equated to four full time employees.
             </li>
             <li>
-            Reduced a manual reconciliation process from over an hour to less than 10 minutes, by redesigning the user dashboard layout and automating some of the process. 
+            Reduced a manual reconciliation process from over an hour to less than 10 minutes, by redesigning the user dashboard layout and automating some of the process.
             </li>
           </ul>
         </li>
@@ -498,7 +498,7 @@
 			    <p class="gen_text moreinfo_text margin0 justify">
                   <span class=centred style="float:right;"><b><u>Freelance</u></b></span>
                   <br/><br/>
-                  Designed and built Nepos, a point of sale and cash management system for start-ups and small businesses. 
+                  Designed and built Nepos, a point of sale and cash management system for start-ups and small businesses.
                   Currently in use by several businesses in the north east of India.
                   <br/><br/>
                   Created desktop software that creates Swift MT940 cash statements from financial records for a company in Germany.
@@ -529,8 +529,8 @@
                   <p class="gen_text moreinfo_text margin0 justify">
                      <span class=centred style="float:right;"><b><u>Career Break</u></b></span>
                      <br/><br/>
-                     During this time I moved to Nagaland in India to spend time with my wife's family, and get to know her place of birth, 
-                     culture, and customs. As well as exploring her beautiful country I spent a lot of my time acquiring knowledge and 
+                     During this time I moved to Nagaland in India to spend time with my wife's family, and get to know her place of birth,
+                     culture, and customs. As well as exploring her beautiful country I spent a lot of my time acquiring knowledge and
                      learning new skills through online resources.
                   </p>
                </div>
@@ -559,11 +559,11 @@
                         </u></b>
                      </span>
                      <br/><br/><br/>
-                     Senior analyst in the management team of the corporate and investment bank’s reconciliation services utility. 
-                     Responsible for the proactive optimisation of operational processes and systems. Advisor to senior management on 
+                     Senior analyst in the management team of the corporate and investment bank’s reconciliation services utility.
+                     Responsible for the proactive optimisation of operational processes and systems. Advisor to senior management on
                      operations, technology, and change.
                      <br/><br/>
-                     Business technical lead in global change activities, including requirement elicitation and management, solution assessment, operations impact 
+                     Business technical lead in global change activities, including requirement elicitation and management, solution assessment, operations impact
                      analysis, risk analysis, testing, implementation planning and execution.
                      <br/><br/>
                      Owned and managed the front end configuration of the bank’s main reconciliation system.
@@ -598,14 +598,14 @@
                         </u></b>
                      </span>
                      <br/><br/><br/>
-                     Business Analyst within the Global Payments Change Team. Role included: Eliciting and documenting stakeholder and 
-                     end user requirements; performing impact assessments on business operations and systems; contributing to operational 
-                     risk assessments and developing/proposing effective controls; designing and managing the execution of User Acceptance 
+                     Business Analyst within the Global Payments Change Team. Role included: Eliciting and documenting stakeholder and
+                     end user requirements; performing impact assessments on business operations and systems; contributing to operational
+                     risk assessments and developing/proposing effective controls; designing and managing the execution of User Acceptance
                      Testing; creating implementation plans; and performing post implementation analysis and lessons learnt.
                   </p>
                   <ul>
                      <li>
-                     Awarded the "Significant Technology Achievement Award" from the CIO of Technology and COO of Barclays Africa, in 
+                     Awarded the "Significant Technology Achievement Award" from the CIO of Technology and COO of Barclays Africa, in
                      recognition of the outstanding contribution to the Kenya Replatforming Programme.
                      </li>
                      <li>
@@ -639,7 +639,7 @@
                         <b><u>TLM System Administrator</u></b>
                      </span>
                      <br/><br/>
-                     Monitoring and administration of STL TLM and SSR Swift messaging systems. Duties included static configuration; monitoring via logs 
+                     Monitoring and administration of STL TLM and SSR Swift messaging systems. Duties included static configuration; monitoring via logs
                      and SQL queries to databases; incoming and outgoing message monitoring; account proofing; and incident management and resolution.
                   </p>
                </div>
@@ -669,8 +669,8 @@
                         </u></b>
                      </span>
                      <br/><br/><br/>
-                     This role involved the daily monitoring, reconciling, and timely reporting of account ledgers and statements. Due to my extensive knowledge 
-                     of the business processes I was selected to write the business procedures and process flow maps as part of an off-shoring project. I then used 
+                     This role involved the daily monitoring, reconciling, and timely reporting of account ledgers and statements. Due to my extensive knowledge
+                     of the business processes I was selected to write the business procedures and process flow maps as part of an off-shoring project. I then used
                      those documents to train and test my off-shore colleagues.
                   </p>
                </div>
@@ -717,7 +717,7 @@
                         <b><u>English Teacher</u></b>
                      </span>
                      <br/><br/>
-                     Taught English to class 10 students at the Children\'s Christian School in Kohima, Nagaland. The school provides education to poor and 
+                     Taught English to class 10 students at the Children\'s Christian School in Kohima, Nagaland. The school provides education to poor and
                      underprivileged children in the north east of India.
                      <br/><br/>
                   </p>
