--- a/html/software.html
+++ b/html/software.html
@@ -36,7 +36,7 @@
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:description" content="Software projects by Thomas Edward Rudge." />
-  <!-- CSS & JS -->
+  <!-- CSS -->
   <link rel="stylesheet" href="../css/main.css" />
   <!-- Structured Data -->
   <script type="application/ld+json">
@@ -86,7 +86,7 @@
 
 <body id=bsoft>
   <div id=container>
-    <a id=topbar class='gen_text centred_txt' onclick='scrollToTop()'>
+    <a id=topbar class='gen_text centred_txt'>
     ^^^
     </a>
     <header>
@@ -118,7 +118,7 @@
           </ul>
         </nav>
         <div id=navmobile>
-        <a id=mobile_navlink onclick='toggleNavPane(1)'></a>
+
         </div>
         <div id=mobilelist>
           <ul class=gen_text>
@@ -185,21 +185,21 @@
     <div class='gen_div margin40 mobile_parent' id=nepos>
       <a href="http://neposservice.wix.com/nepos" title="Nepos Software" target="_blank" >
         <img class='genphoto mobile_child img150' src="../images/logos/nepos_logo.png" alt="NEPOS" />
-        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fnepos.software%2F&tabs=timeline&width=180&height=70&small_header=true&adapt_container_width=true&hide_cover=true&show_facepile=false&appId" 
+        <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fnepos.software%2F&tabs=timeline&width=180&height=70&small_header=true&adapt_container_width=true&hide_cover=true&show_facepile=false&appId"
           width="180" height="70" style="border:none;overflow:hidden;margin-top: 8px;" scrolling="no" frameborder="0" allowTransparency="true">
         </iframe>
       </a>
       <p class='gen_text justify med_text mobile_child'>
-      After hearing my brother-in-law complain about the cost of his business's software, I decided to help him out and went about 
-      designing a simple POS and cash management system. I started researching and playing around with the Python programming language 
-      and its libraries, at first seeing the task more as a learning exercise rather than anything serious. But a year and a half later 
-      the first version of Nepos was released to the general public, and now it is currently being used by several businesses in the 
+      After hearing my brother-in-law complain about the cost of his business's software, I decided to help him out and went about
+      designing a simple POS and cash management system. I started researching and playing around with the Python programming language
+      and its libraries, at first seeing the task more as a learning exercise rather than anything serious. But a year and a half later
+      the first version of Nepos was released to the general public, and now it is currently being used by several businesses in the
       north east of India.
       <br /><br />
-      Nepos's main features include: the POS interface; cash-flow, invoice, and loss records; end of day reporting; stock records and monitoring; 
-      MI console; search screen for all records; archiving; customisable user profiles; user activity, archive, and error logs; and automatic alerts 
-      to email and PushBullet. More details can be found on the 
-      <a class=normal_link href="http://neposservice.wix.com/nepos" title="Nepos Software" target="_blank">Nepos website</a>.     
+      Nepos's main features include: the POS interface; cash-flow, invoice, and loss records; end of day reporting; stock records and monitoring;
+      MI console; search screen for all records; archiving; customisable user profiles; user activity, archive, and error logs; and automatic alerts
+      to email and PushBullet. More details can be found on the
+      <a class=normal_link href="http://neposservice.wix.com/nepos" title="Nepos Software" target="_blank">Nepos website</a>.
       </p>
     </div>
     <hr />
@@ -208,11 +208,11 @@
         <img class='genphoto mobile_child img150' src="../images/logos/mt_logo.png" alt="MT Logo" />
       </a>
       <p class='gen_text justify med_text mobile_child'>
-      One of my first jobs was as a System Administrator and a daily task was checking the banks swift messaging system for 
-      the Vostro accounts, as well as incoming cash statements for the bank's main reconciliation system. I learnt a lot about swift 
-      message structure and standards, and so it seemed only fitting that one of my first programs be a conversion script for such 
-      messages. I have created an <a class=red_link href="swift_page.html">online version</a> using Javascript, and a Python version can be 
-      found on my <a class=normal_link href="https://github.com/Thomas-Rudge/MT940_50_GEN/blob/master/MT940_50.py" target="_blank">GitHub page</a>. 
+      One of my first jobs was as a System Administrator and a daily task was checking the banks swift messaging system for
+      the Vostro accounts, as well as incoming cash statements for the bank's main reconciliation system. I learnt a lot about swift
+      message structure and standards, and so it seemed only fitting that one of my first programs be a conversion script for such
+      messages. I have created an <a class=red_link href="swift_page.html">online version</a> using Javascript, and a Python version can be
+      found on my <a class=normal_link href="https://github.com/Thomas-Rudge/MT940_50_GEN/blob/master/MT940_50.py" target="_blank">GitHub page</a>.
       I also created a version with a graphical user interface for a company in Germany that you can download <a class=normal_link href="" target="_blank">here</a>.
       </p>
     </div>
