--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 <body id=bhome>
   <div id=container>
-    <a id=topbar class='gen_text centred_txt' onclick='scrollToTop()'>
+    <a id=topbar class='gen_text centred_txt'>
     ^^^
     </a>
     <header>
@@ -118,7 +118,7 @@
           </ul>
         </nav>
         <div id=navmobile>
-        <a id=mobile_navlink onclick='toggleNavPane(0)'></a>
+        <a id=mobile_navlink></a>
         </div>
         <div id=mobilelist>
           <ul class=gen_text>
