--- a/html/photography.html
+++ b/html/photography.html
@@ -36,9 +36,8 @@
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:description" content="Photographic portfolio of Thomas Edward Rudge." />
-  <!-- CSS & JS -->
+  <!-- CSS -->
   <link rel="stylesheet" href="../css/main.css" />
-  <script type="text/javascript" src="../javascript/slides.js"></script>
   <!-- Icons-->
   <link rel="apple-touch-icon" sizes="57x57" href="../favicon/apple-touch-icon-57x57.png" />
   <link rel="apple-touch-icon" sizes="60x60" href="../favicon/apple-touch-icon-60x60.png" />
@@ -66,7 +65,7 @@
 
 <body id=bphoto>
   <div id=container class=black>
-    <a id=topbar class='gen_text centred_txt' onclick='scrollToTop()'>
+    <a id=topbar class='gen_text centred_txt'>
     ^^^
     </a>
     <header class=black>
@@ -98,7 +97,6 @@
         </ul>
         </nav>
         <div id=navmobile>
-        <a id=mobile_navlink onclick='toggleNavPane(1)'></a>
         </div>
         <div id=mobilelist>
           <ul class=gen_text>
@@ -427,5 +425,7 @@
     Site not working properly? &#128534; <a class=normal_link href="mailto:hello@thomasrudge.co.uk?Subject=Something%20is%20wrong%20with%20your%20site!">Please let me know.</a>
     </footer>
   </div>
+<script type="text/javascript" src="../javascript/slides.js"></script>
+<script type="text/javascript" src="../javascript/mobile_navigation.js"></script>
 </body>
 </html>
